[tool.poetry]
name = "Login Generator"
version = "0.1.0"
description = "An app to create user logins based on their names"
authors = ["Igor Bianchi <igorgbianchi@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.4"
nltk = "^3.7"
click = "^8.1.3"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
flake518 = "^1.3.0"
black = "^22.8.0"
mypy = "^0.981"
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
include = '\.pyi?$'
preview = true

[tool.flake8]
max-complexity = 10
max-line-length = 88
exclude = [ ".git", "__pycache__", "docs/source/conf.py", "old", "build", "dist", ".tox", "venv", ".mypy_cache"]
per-file-ignores = ["__init__.py:F401,F403", "**/migrations/*:BLK100,E501,I,C90,T484"]

[tool.mypy]
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
disallow_untyped_defs = true
plugins = [
    "pydantic.mypy"
]


[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[[tool.mypy.overrides]]
module = [
    'nltk.*',
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
